Fixed bug #5317: Buttons are too small when translated labels are long (thanks to Lorenz Ulrich)
git-svn-id: https://svn.typo3.org/TYPO3v4/CoreProjects/feedit/trunk@2272 743128fe-103e-dd11-99c4-001b210b3e58

--- a/feeditadvanced/res/css/fe_edit_advanced.css
+++ b/feeditadvanced/res/css/fe_edit_advanced.css
@@ -38,37 +38,36 @@ div.feEditAdvanced-menuToolbar div.feEditAdvanced-spacer {
 }
 
 
-div#feEditAdvanced-menuBar a.feEditAdvanced-button,
-div#feEditAdvanced-menuBar a.feEditAdvanced-smallButton,
-div#feEditAdvanced-menuBar div.feEditAdvanced-smallButton {
-	display: inline-block;
-	padding-top: 7px;
+div#feEditAdvanced-menuBar .feEditAdvanced-firstRow a.feEditAdvanced-smallButton,
+div#feEditAdvanced-menuBar .feEditAdvanced-firstRow div.feEditAdvanced-smallButton,
+div#feEditAdvanced-menuBar .feEditAdvanced-firstRow a.feEditAdvanced-button {
 	margin: 2px 10px 0 0;
-	height: 21px;
+	padding: 0px 3px 0 0;
+	height: 26px;
 	text-decoration: none;
 	cursor: pointer;
 	text-align: center;
-	color: #c6c6c6;
-	background: url(../icons/menubar/button.png) no-repeat 0 0;
+	background: url(../icons/menubar/button_right.png) no-repeat top right;
 	font-size: 12px;
-	width: 92px;
+	display: block;
 
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 }
 
-div#feEditAdvanced-menuBar a.feEditAdvanced-smallButton,
-div#feEditAdvanced-menuBar div.feEditAdvanced-smallButton {
-	color: #eee;
-	background: url(../icons/menubar/button_small.png) no-repeat 0 0;
-	padding: 3px 0 0 0;
-	margin: 4px 8px 0 0;
-	height: 20px;
-	width: 70px;
-	font-size: 10px;
+div#feEditAdvanced-menuBar .feEditAdvanced-firstRow .feEditAdvanced-button span.feEditAdvanced-buttonText {
+
+	padding: 7px 5px 0px 7px;
+	color: #c6c6c6;
+	height: 21px;
+	display: block;
+	background: url(../icons/menubar/button_left.png) no-repeat;
+	min-width: 75px;
 }
 
-div#feEditAdvanced-menuBar div.feEditAdvanced-smallButton { float: right; }
+div#feEditAdvanced-menuBar  #feEditAdvanced-showHiddenContent label {
+	color: #c6c6c6;
+}
 
 
 #feEditAdvanced-menuBar a.feEditAdvanced-button:hover,
